[package]
name = "brothereye"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.19.0"
winapi = { version = "0.3.9", features = [ "softpub"] }
thiserror = "1.0.26"
pelite = "0.9.0"
goblin = "0.4.2"

[build-dependencies]
windows = "0.19.0"
